--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^1.0.0",
+    "@clerk/nextjs": "^6.3.4",
     "@headlessui/react": "^2.1.3",
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
+    "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
@@ -28,6 +28,8 @@
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
     "framer-motion": "^11.3.24",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "kickbox": "^2.0.4",
     "lucide-react": "^0.417.0",
     "mailgun.js": "^9.4.1",
@@ -41,7 +43,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email-editor": "^1.7.11",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
